--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,6 @@ jobs:
     - name: FTP-Deploy-Action
       uses: SamKirkland/FTP-Deploy-Action@3.1.1
       with:
-        ftp-server: ftp://ftp.samkirkland.com/
-        ftp-username: myFtpUserName
-        ftp-password: ${{ secrets.FTP_PASSWORD }}
+        ftp-server: sftp://server234.web-hosting.com:21098/
+        ftp-username: davivirc
+        ftp-password: ${{ secrets.SFTP_PASSWORD }}
