--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
     - name: FTP-Deploy-Action
       uses: SamKirkland/FTP-Deploy-Action@3.1.1
       with:
-        ftp-server: sftp://server234.web-hosting.com:21098/
+        ftp-server: ftp://server234.web-hosting.com:21/
         ftp-username: davivirc
         ftp-password: ${{ secrets.SFTP_PASSWORD }}
         git-ftp-args: --dry-run
