--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,8 @@
 # https://github.com/marketplace/actions/ftp-deploy
-on: push
+on:
+  push:
+    branches:
+      - master
 name: Publish Website
 jobs:
   FTP-Deploy-Action:
@@ -15,4 +18,3 @@ jobs:
         ftp-server: ftp://server234.web-hosting.com:21/
         ftp-username: davivirc
         ftp-password: ${{ secrets.SFTP_PASSWORD }}
-        git-ftp-args: --dry-run
