fixing event name for workflow

--- a/.github/workflows/html5-validator.yml
+++ b/.github/workflows/html5-validator.yml
@@ -1,6 +1,6 @@
 # https://github.com/marketplace/actions/html5-validator
 name: HTML5 Validator
-on: pull-request
+on: pull_request
 jobs:
   build:
     runs-on: ubuntu-latest
