--- a/.github/workflows/yaml-lint.yml
+++ b/.github/workflows/yaml-lint.yml
@@ -1,6 +1,6 @@
 # https://github.com/marketplace/actions/yaml-lint
 ---
-on: pull_request
+on: [pull_request]
 name: YAML Linter
 jobs:
   Linter:
@@ -10,3 +10,5 @@ jobs:
       - uses: actions/checkout@v1
       - name: yaml-lint
         uses: ibiqlik/action-yamllint@v1
+        with:
+          strict: true
