--- a/.github/workflows/yaml-lint.yml
+++ b/.github/workflows/yaml-lint.yml
@@ -1,6 +1,6 @@
 # https://github.com/marketplace/actions/yaml-lint
 ---
-on: [pull_request]
+on: pull_request
 name: YAML Linter
 jobs:
   Linter:
@@ -12,3 +12,4 @@ jobs:
         uses: ibiqlik/action-yamllint@v1
         with:
           strict: true
+          config_file: ".github/workflows/.yamllint.yml"
