--- a/.github/workflows/pr-validate.yml
+++ b/.github/workflows/pr-validate.yml
@@ -1,5 +1,4 @@
-# Runs https://github.com/marketplace/actions/ftp-deploy
----
+---  # Runs https://github.com/marketplace/actions/ftp-deploy
 on: pull_request
 name: Test Publishing  # DOES NOT DEPLOY CHANGES!
 jobs:
