--- a/.github/workflows/html5-validator.yml
+++ b/.github/workflows/html5-validator.yml
@@ -3,7 +3,7 @@
 on: pull_request
 name: HTML5 Validator
 jobs:
-  Linter:
+  HTML-Linter:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2  # Required with all actions
