--- a/.github/workflows/yaml-lint.yml
+++ b/.github/workflows/yaml-lint.yml
@@ -12,4 +12,4 @@ jobs:
         uses: ibiqlik/action-yamllint@v1
         with:
           strict: true
-          config_file: ".github/workflows/.yamllint.yml"
+          config_file: ".github/workflows/.yamllint"
