--- a/.github/workflows/yaml-lint.yml
+++ b/.github/workflows/yaml-lint.yml
@@ -3,7 +3,7 @@
 on: pull_request
 name: YAML Linter
 jobs:
-  Linter:
+  YAML-Linter:
     runs-on: ubuntu-latest
 
     steps:
@@ -12,4 +12,4 @@ jobs:
         uses: ibiqlik/action-yamllint@v1
         with:
           strict: true
-          config_file: ".github/workflows/.yamllint.yml"
+          config_file: ".github/workflows/.yamllint"
