--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,9 +12,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2.1.0
+        with:
+          fetch-depth: 2
       - name: FTP-Deploy-Action
         uses: SamKirkland/FTP-Deploy-Action@3.1.1
         with:
           ftp-server: ftp://server234.web-hosting.com:21/
           ftp-username: davivirc
           ftp-password: ${{ secrets.SFTP_PASSWORD }}
+          git-ftp-args: --remote-root public_html/
