--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,6 @@ jobs:
       - name: FTP-Deploy-Action
         uses: SamKirkland/FTP-Deploy-Action@3.1.1
         with:
-          ftp-server: ftp://server234.web-hosting.com:21/public_html/
+          ftp-server: ftp://server234.web-hosting.com/public_html/
           ftp-username: davivirc
           ftp-password: ${{ secrets.SFTP_PASSWORD }}
-          git-ftp-args: --remote-root=public_html
