--- a/.github/workflows/comment-autoreply.yml
+++ b/.github/workflows/comment-autoreply.yml
@@ -10,10 +10,15 @@ jobs:
       - name: Sending REST API request
         env:
           ISSUE_NUMBER: ${{ github.event.issue.number }}
+          COMMENTER: ${{ github.event.sender }}
         run: |
           curl \
             -X POST \
             -H "Accept: application/vnd.github.v3+json" \
             -H "Authorization: Basic xhamyd ${{ secrets.GITHUB_TOKEN }}" \
             https://api.github.com/repos/xhamyd/public_html/issues/${ISSUE_NUMBER}/comments \
-            -d '{"body":"This is a test response - REST"}'
+            -d '{"body":"Hi @${COMMENTER} , thanks for showing interest in my Personal Website project! Right now, I \
+                         have the project set up for public viewing of my personal contributions to this repo. At this \
+                         moment, I am not accepting outside contributions to this project.\n\nSince I don't have a \
+                         contribution license set up for this project, I encourage you to comment on #33 for any bugs \
+                         or suggestions you may have for the project. Thanks again for your interest, and take care!"}'
