--- a/.github/workflows/comment-autoreply.yml
+++ b/.github/workflows/comment-autoreply.yml
@@ -1,9 +1,10 @@
+# This is a homemade workflow, no references necessary here
 ---
 on: issue_comment
 name: Autoreply to issue comments
 jobs:
   build:
-    name: Greeting
+    name: Issue auto-commenter
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -14,11 +15,11 @@ jobs:
         run: |
           curl \
             -X POST \
-            -H "Accept: application/vnd.github.v3+json" \
-            -H "Authorization: Basic xhamyd ${{ secrets.GITHUB_TOKEN }}" \
+            -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
             https://api.github.com/repos/xhamyd/public_html/issues/${ISSUE_NUMBER}/comments \
-            -d '{"body":"Hi @${COMMENTER} , thanks for showing interest in my Personal Website project! Right now, I \
-                         have the project set up for public viewing of my personal contributions to this repo. At this \
-                         moment, I am not accepting outside contributions to this project.\n\nSince I don't have a \
-                         contribution license set up for this project, I encourage you to comment on #33 for any bugs \
-                         or suggestions you may have for the project. Thanks again for your interest, and take care!"}'
+            -d "{\"body\":\"Hi @${COMMENTER} , thanks for showing interest in my Personal Website project! Right now, \
+                            I have the project set up for public viewing of my personal contributions to this repo. At \
+                            this moment, I am not accepting outside contributions to this project.\n\nSince I don't \
+                            have a contribution license set up for this project, I encourage you to comment on #33 for \
+                            any bugs or suggestions you may have for the project. Thanks again for your interest, and \
+                            take care!\"}"
