Let's see how this runs!

--- a/.github/workflows/comment-autoreply.yml
+++ b/.github/workflows/comment-autoreply.yml
@@ -1,6 +1,6 @@
 # This is a homemade workflow, no references necessary here
 ---
-on: issue_comment
+on: [issue_comment, workflow_dispatch]
 name: Autoreply to issue comments
 jobs:
   build:
@@ -12,14 +12,4 @@ jobs:
         env:
           ISSUE_NUMBER: ${{ github.event.issue.number }}
           COMMENTER: ${{ github.event.comment.user.login }}
-        run: |
-          curl \
-            -X POST \
-            -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-            https://api.github.com/repos/xhamyd/public_html/issues/${ISSUE_NUMBER}/comments \
-            -d "{\"body\":\"Hi @${COMMENTER} , thanks for showing interest in my Personal Website project! Right now, \
-                            I have the project set up for public viewing of my personal contributions to this repo. At \
-                            this moment, I am not accepting outside contributions to this project.\n\nSince I don't \
-                            have a contribution license set up for this project, I encourage you to comment on #33 for \
-                            any bugs or suggestions you may have for the project. Thanks again for your interest, and \
-                            take care!\"}"
+        run: pwd && ls -la && ./autocomment.sh
