Updating with correct token values

--- a/.github/workflows/comment-autoreply.yml
+++ b/.github/workflows/comment-autoreply.yml
@@ -12,4 +12,5 @@ jobs:
         env:
           ISSUE_NUMBER: ${{ github.event.issue.number }}
           COMMENTER: ${{ github.event.comment.user.login }}
+          OAUTH_TOKEN: ${{ secrets.OAUTH_TOKEN }}
         run: .github/workflows/autocomment.sh
