--- a/.github/workflows/comment-autoreply.yml
+++ b/.github/workflows/comment-autoreply.yml
@@ -1,6 +1,6 @@
 # This is a homemade workflow, no references necessary here
 ---
-on: [issue_comment, workflow_dispatch]
+on: issue_comment
 name: Autoreply to issue comments
 jobs:
   build:
@@ -12,4 +12,5 @@ jobs:
         env:
           ISSUE_NUMBER: ${{ github.event.issue.number }}
           COMMENTER: ${{ github.event.comment.user.login }}
-        run: pwd && ls -la && ./autocomment.sh
+          OAUTH_TOKEN: ${{ secrets.OAUTH_TOKEN }}
+        run: .github/workflows/autocomment.sh
