--- a/.github/workflows/comment-manualreply.yml
+++ b/.github/workflows/comment-manualreply.yml
@@ -20,4 +20,5 @@ jobs:
         env:
           ISSUE_NUMBER: ${{ github.event.inputs.issue_number }}
           COMMENTER: ${{ github.event.inputs.commenter }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: .github/workflows/manualcomment.sh
