--- a/.github/workflows/html5-validator.yml
+++ b/.github/workflows/html5-validator.yml
@@ -10,5 +10,5 @@ jobs:
       - name: Checks HTML5
         uses: Cyb3r-Jak3/html5validator-action@v0.4.1
         with:
-          root: /
+          root: ./
           css: true
