--- a/.github/workflows/html5-validator.yml
+++ b/.github/workflows/html5-validator.yml
@@ -13,6 +13,8 @@ jobs:
           root: ./
           css: true
   Upload-Log:
+    if: ${{ failure() }}
+    needs: HTML-Linter
     runs-on: ubuntu-latest
     steps:
       - uses: actions/upload-artifact@v2
