--- a/.github/workflows/html5-validator.yml
+++ b/.github/workflows/html5-validator.yml
@@ -8,7 +8,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2  # Required with all actions
       - name: Checks HTML5
-        uses: Cyb3r-Jak3/html5validator-action@v0.4.1
+        uses: Cyb3r-Jak3/html5validator-action@v0.6.1
         with:
-          root: .
+          root: ./
           css: true
