--- a/.github/workflows/publish-website.yml
+++ b/.github/workflows/publish-website.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           fetch-depth: 2
       - name: FTP-Deploy-Action
-        uses: SamKirkland/FTP-Deploy-Action@4.3.4
+        uses: SamKirkland/FTP-Deploy-Action@v4.3.4
         with:
           server: ftp://server234.web-hosting.com/public_html/
           username: davivirc
