--- a/.github/workflows/publish-website.yml
+++ b/.github/workflows/publish-website.yml
@@ -15,8 +15,8 @@ jobs:
         with:
           fetch-depth: 2
       - name: FTP-Deploy-Action
-        uses: SamKirkland/FTP-Deploy-Action@v4.3.4
+        uses: SamKirkland/FTP-Deploy-Action@3.1.1
         with:
-          server: ftp://server234.web-hosting.com/public_html/
-          username: davivirc
-          password: ${{ secrets.SFTP_PASSWORD }}
+          ftp-server: ftp://server234.web-hosting.com/public_html/
+          ftp-username: davivirc
+          ftp-password: ${{ secrets.SFTP_PASSWORD }}
