--- a/.github/workflows/pr-validate.yml
+++ b/.github/workflows/pr-validate.yml
@@ -2,19 +2,20 @@
 ---
 on: pull_request
 
-name: Test Publishing  # DOES NOT DEPLOY CHANGES!
+name: Test Publishing via SSH # DOES NOT DEPLOY CHANGES!
 jobs:
-  FTP-Deploy-Test:
-    name: FTP-Deploy-Action
+  web-deploy:
+    name: Deploy Website During PR
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2.1.0
+      - Name: Get Latest Code
+      - uses: actions/checkout@v3
+
+      - name: Sync Files
+        uses: SamKirkland/web-deploy@v1
         with:
-          fetch-depth: 2
-      - name: FTP-Deploy-Action
-        uses: SamKirkland/FTP-Deploy-Action@3.1.1
-        with:
-          ftp-server: ftp://server234.web-hosting.com:21/
-          ftp-username: davivirc
+          target-server: server234.web-hosting.com
+          remote-user: davivirc
           ftp-password: ${{ secrets.SFTP_PASSWORD }}
-          git-ftp-args: --dry-run
+          target-port: 21098
+          rsync-options: --dry-run --archive --compress --delete-after --human-readable --exclude=.git* --exclude=.git/
