71: changing rsync option format

--- a/.github/workflows/pr-validate.yml
+++ b/.github/workflows/pr-validate.yml
@@ -19,6 +19,6 @@ jobs:
           private-ssh-key: ${{ secrets.WEBSITE_SSH_PRIVATE_KEY }}
           ssh-port: 21098
           destination-path: ~/public_html
-          rsync-options: --dry-run --archive --compress --delete-after --human-readable --exclude=.git* --exclude=.git/ --rsh='ssh -oHostKeyAlgorithms +ssh-rsa -oPubkeyAcceptedAlgorithms +ssh-rsa'
+          rsync-options: -e 'ssh -oHostKeyAlgorithms +ssh-rsa' --dry-run --archive --compress --delete-after --human-readable --exclude=.git* --exclude=.git/
         env:
           RSYNC_PASSWORD: ${{ secrets.SFTP_PASSWORD }}
