71: maybe I can manipulate the SSH config directly?

--- a/.github/workflows/pr-validate.yml
+++ b/.github/workflows/pr-validate.yml
@@ -11,6 +11,9 @@ jobs:
       - name: Get Latest Code
         uses: actions/checkout@v3
 
+      - name: Run a one-line command
+        run: ls ~/.ssh
+
       - name: Sync Files
         uses: SamKirkland/web-deploy@v1
         with:
@@ -19,6 +22,6 @@ jobs:
           private-ssh-key: ${{ secrets.WEBSITE_SSH_PRIVATE_KEY }}
           ssh-port: 21098
           destination-path: ~/public_html
-          rsync-options: -e 'ssh -oHostKeyAlgorithms +ssh-rsa' --dry-run --archive --compress --delete-after --human-readable --exclude=.git* --exclude=.git/
+          rsync-options: --dry-run --archive --compress --delete-after --human-readable --exclude=.git* --exclude=.git/
         env:
           RSYNC_PASSWORD: ${{ secrets.SFTP_PASSWORD }}
