--- a/.github/workflows/pr-validate.yml
+++ b/.github/workflows/pr-validate.yml
@@ -12,7 +12,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Run a one-line command
-        run: ls ~/.ssh
+        run: mkdir .ssh && echo "HostKeyAlgorithms +ssh-rsa" > .ssh/config
 
       - name: Sync Files
         uses: SamKirkland/web-deploy@v1
