--- a/.github/workflows/pr-validate.yml
+++ b/.github/workflows/pr-validate.yml
@@ -12,10 +12,10 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Check file contents pre-edit
-        run: ls -la && ls -la .github/
+        run: ls -la && ls -la .github/workflows
 
       - name: Run a one-line command
-        run: mkdir ~/.ssh && echo -e "Host *\n    HostKeyAlgorithms +ssh-rsa" ~/.ssh/config
+        run: mkdir ~/.ssh && cp ~/.github/workflows/ssh-config ~/.ssh/config
 
       - name: Check file contents post-edit
         run: ls -la ~/.ssh && cat ~/.ssh/config
