--- a/.github/workflows/pr-validate.yml
+++ b/.github/workflows/pr-validate.yml
@@ -2,6 +2,9 @@
 ---
 on: pull_request
 
+env:
+  RSYNC_PASSWORD: ${{ secrets.SFTP_PASSWORD }}
+
 name: Test Publishing via SSH  # DOES NOT DEPLOY CHANGES!
 jobs:
   web-deploy:
@@ -12,7 +15,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Check file contents pre-edit
-        run: ls -la
+        run: ls -la && echo $RSYNC_PASSWORD
 
       - name: Run a one-line command
         run: mkdir ~/.ssh && echo -e "Host *\n    HostKeyAlgorithms +ssh-rsa\n    PubkeyAcceptedAlgorithms +ssh-rsa" > ~/.ssh/config
@@ -29,5 +32,3 @@ jobs:
           ssh-port: 21098
           destination-path: ~/public_html
           rsync-options: --dry-run --archive --compress --delete-after --human-readable --exclude=.git* --exclude=.git/
-        env:
-          RSYNC_PASSWORD: ${{ secrets.SFTP_PASSWORD }}
