--- a/.github/workflows/pr-validate.yml
+++ b/.github/workflows/pr-validate.yml
@@ -22,4 +22,4 @@ jobs:
           private-ssh-key: ${{ secrets.WEBSITE_SSH_PRIVATE_KEY }}
           ssh-port: 21098
           destination-path: ~/public_html
-          rsync-options: -vv --dry-run --archive --human-readable --itemize-changes --delete-after --human-readable --exclude=.git* --exclude=.git/ --stats
+          rsync-options: -v --dry-run --archive --itemize-changes --delete-after --human-readable --stats --exclude=.git* --exclude=.git/ --exclude-from=.gitignore
