--- a/.github/workflows/pr-validate.yml
+++ b/.github/workflows/pr-validate.yml
@@ -12,7 +12,9 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Setup Custom SSH Config
-        run: mkdir ~/.ssh && echo -e "Host *\n    HostKeyAlgorithms +ssh-rsa\n    PubkeyAcceptedAlgorithms +ssh-rsa" > ~/.ssh/config
+        run: >
+          mkdir ~/.ssh &&
+          echo -e "Host *\n    HostKeyAlgorithms +ssh-rsa\n    PubkeyAcceptedAlgorithms +ssh-rsa" > ~/.ssh/config
 
       - name: Test Publish via rsync
         uses: SamKirkland/web-deploy@v1
@@ -22,4 +24,6 @@ jobs:
           private-ssh-key: ${{ secrets.WEBSITE_SSH_PRIVATE_KEY }}
           ssh-port: 21098
           destination-path: ~/public_html
-          rsync-options: -v --dry-run --archive --itemize-changes --delete-after --human-readable --stats --exclude=.git* --exclude=.git/ --exclude-from=.gitignore
+          rsync-options: >
+            -v --dry-run --archive --itemize-changes --delete-after --human-readable --stats
+            --exclude=.git* --exclude=.git/ --exclude-from=.gitignore
