--- a/.github/workflows/pr-validate.yml
+++ b/.github/workflows/pr-validate.yml
@@ -1,19 +1,29 @@
-# https://github.com/marketplace/actions/ftp-deploy
+# https://github.com/marketplace/actions/web-deploy-anything
 ---
 on: pull_request
-name: Test Publishing  # DOES NOT DEPLOY CHANGES!
+
+name: Test Publishing via SSH  # DOES NOT DEPLOY CHANGES!
 jobs:
-  FTP-Deploy-Test:
-    name: FTP-Deploy-Action
+  web-deploy:
+    name: Deploy Website During PR
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2.1.0
+      - name: Get Latest Files
+        uses: actions/checkout@v3
+
+      - name: Setup Custom SSH Config  # Necessary because server's OpenSSH 5.3 doesn't natively support RSA
+        run: >
+          mkdir ~/.ssh &&
+          echo -e "Host *\n    HostKeyAlgorithms +ssh-rsa\n    PubkeyAcceptedAlgorithms +ssh-rsa" > ~/.ssh/config
+
+      - name: Test Publish via rsync
+        uses: SamKirkland/web-deploy@v1
         with:
-          fetch-depth: 2
-      - name: FTP-Deploy-Action
-        uses: SamKirkland/FTP-Deploy-Action@3.1.1
-        with:
-          ftp-server: ftp://server234.web-hosting.com:21/
-          ftp-username: davivirc
-          ftp-password: ${{ secrets.SFTP_PASSWORD }}
-          git-ftp-args: --dry-run
+          target-server: server234.web-hosting.com
+          remote-user: davivirc
+          private-ssh-key: ${{ secrets.WEBSITE_SSH_PRIVATE_KEY }}
+          ssh-port: 21098
+          destination-path: ~/public_html
+          rsync-options: >
+            -v --dry-run --archive --itemize-changes --delete-after --human-readable --stats
+            --exclude=.git* --exclude=.git/ --exclude-from=.gitignore
