--- a/.github/workflows/pr-validate.yml
+++ b/.github/workflows/pr-validate.yml
@@ -4,26 +4,8 @@ on: pull_request
 
 name: Test Publishing via SSH  # DOES NOT DEPLOY CHANGES!
 jobs:
-  web-deploy:
-    name: Deploy Website During PR
-    runs-on: ubuntu-latest
-    steps:
-      - name: Get Latest Files
-        uses: actions/checkout@v3
-
-      - name: Setup Custom SSH Config  # Necessary because server's OpenSSH 5.3 doesn't natively support RSA
-        run: >
-          mkdir ~/.ssh &&
-          echo -e "Host *\n    HostKeyAlgorithms +ssh-rsa\n    PubkeyAcceptedAlgorithms +ssh-rsa" > ~/.ssh/config
-
-      - name: Test Publish via rsync
-        uses: SamKirkland/web-deploy@v1
-        with:
-          target-server: server234.web-hosting.com
-          remote-user: davivirc
-          private-ssh-key: ${{ secrets.WEBSITE_SSH_PRIVATE_KEY }}
-          ssh-port: 21098
-          destination-path: ~/public_html
-          rsync-options: >
-            -v --dry-run --archive --itemize-changes --delete-after --human-readable --stats
-            --exclude=.git* --exclude=.git/ --exclude-from=.gitignore
+  call-workflow-passing-data:
+    uses: ./.github/workflows/pr-merge.yml
+    with:
+      dry-run: --dry-run
+    secrets: inherit
